# ANDROID

./: README.md  init_project.bat
PROJ1/: README.txt  build.bat  install.bat  logcat.bat
PROJ1/app/: AndroidManifest.xml
PROJ1/app/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  renderer.cpp  renderer.h
PROJ1/app/src/main/java/com/programadorzero/proj1/: MainActivity.java
PROJ1/app/src/main/res/values/: strings.xml
imgui/: readme.txt
imgui/backends/sdlgpu3/: .r
imgui/misc/cpp/: .r
imgui/misc/single_file/: .r
